--- a/public/product.html
+++ b/public/product.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <title>Index Page</title>
+    <title>Product Page</title>
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700&amp;display=swap&amp;subset=cyrillic" rel="stylesheet"/>
     <link href="./css/slick.css" rel="stylesheet"/>
     <link href="./css/slick-theme.css" rel="stylesheet"/>
@@ -46,47 +46,123 @@
     <main>
       <section class="content">
         <div class="container">
+          <div class="slider slider_catalog">
+            <div class="slider__item">
+              <div class="content__label mb-20">Уникальное предложение</div>
+              <div class="content__title">Скидка до&nbsp;80% на&nbsp;покупку 2&nbsp;СДХ от&nbsp;HUAWEI</div>
+              <div class="content__offer mt-20">+ лицезии HyperMetro бесплатно!</div>
+            </div>
+            <div class="slider__item">
+              <div class="content__label mb-20">Уникальное предложение</div>
+              <div class="content__title">Скидка до&nbsp;80% на&nbsp;покупку 2&nbsp;СДХ от&nbsp;HUAWEI</div>
+              <div class="content__offer mt-20">+ лицезии HyperMetro бесплатно!</div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="content">
+        <div class="container">
+          <p class="heading heading_small">Ключевые Вендоры компании Инкам</p>
+          <div class="d-flex justify-content-between align-items-center">
+            <div class="vendor-logo"><img class="img-fluid" src="../img/logo/1.jpg"/></div>
+            <div class="vendor-logo"><img class="img-fluid" src="../img/logo/2.jpg"/></div>
+            <div class="vendor-logo"><img class="img-fluid" src="../img/logo/3.jpg"/></div>
+            <div class="vendor-logo"><img class="img-fluid" src="../img/logo/4.jpg"/></div>
+            <div class="vendor-logo"><img class="img-fluid" src="../img/logo/5.jpg"/></div>
+            <div class="vendor-logo"><img class="img-fluid" src="../img/logo/6.jpg"/></div>
+            <div class="vendor-logo"><img class="img-fluid" src="../img/logo/7.jpg"/></div>
+            <div class="vendor-logo"><img class="img-fluid" src="../img/logo/8.jpg"/></div>
+            <div class="vendor-logo"><img class="img-fluid" src="../img/logo/9.jpg"/></div>
+            <div class="vendor-logo"><img class="img-fluid" src="../img/logo/10.jpg"/></div>
+          </div>
+        </div>
+      </section>
+      <section class="block-content">
+        <div class="container">
           <div class="row">
-            <div class="col-9 col-md-12">
-              <h1>Odit aut rerum hic tenetur a sapiente delectus, ut</h1>
-              <p>Lorem ipsum dolor sit amet. Praesentium voluptatum deleniti atque corrupti. Ipsam voluptatem, quia non provident, similique sunt. Doloribus asperiores repellat. cumque nihil impedit, quo minus id, quod maxime. Aspernatur aut rerum necessitatibus saepe. Sit voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem eum fugiat. Hic tenetur a sapiente delectus, ut aliquid ex ea voluptate. Sint, obcaecati cupiditate non provident, similique sunt in ea voluptate velit esse.</p>
-              <h2>Заголовок h2</h2>
-              <h3>Заголовок h3</h3>
-              <h4>Заголовок h4</h4>
-              <h5>Заголовок h5</h5>
-              <h6>Заголовок h6</h6>
-              <p>Odit aut rerum hic tenetur a sapiente delectus, ut. Perferendis doloribus asperiores repellat. nam libero tempore, cum soluta nobis. Quidem rerum hic tenetur. Facilis est eligendi optio, cumque nihil impedit, quo minus. Voluptate velit esse, quam nihil. Iusto odio dignissimos ducimus, qui in culpa. Ex ea voluptate velit esse, quam nihil molestiae consequatur, vel illum. Sit, amet, consectetur, adipisci velit.</p>
-              <blockquote>Lorem ipsum dolor sit amet. Praesentium voluptatum deleniti atque corrupti. </blockquote>
-              <p>Odit aut rerum hic tenetur a sapiente delectus, ut. Perferendis doloribus asperiores repellat. nam libero tempore, cum soluta nobis. Quidem rerum hic tenetur. Facilis est eligendi optio, cumque nihil impedit, quo minus. Voluptate velit esse, quam nihil. Iusto odio dignissimos ducimus, qui in culpa. Ex ea voluptate velit esse, quam nihil molestiae consequatur, vel illum. Sit, amet, consectetur, adipisci velit.</p>
-              <ul>
-                <li>list-item-1</li>
-                <li>list-item-2</li>
-                <li>list-item-3</li>
-                <li>list-item-4</li>
-                <li>list-item-5</li>
-              </ul>
-              <p>Lorem ipsum dolor sit amet. Praesentium voluptatum deleniti atque corrupti. Ipsam voluptatem, quia non provident, similique sunt. Doloribus asperiores repellat. cumque nihil impedit, quo minus id, quod maxime. Aspernatur aut rerum necessitatibus saepe. Sit voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem eum fugiat. Hic tenetur a sapiente delectus, ut aliquid ex ea voluptate. Sint, obcaecati cupiditate non provident, similique sunt in ea voluptate velit esse.</p>
-              <table>
-                <thead>
-                  <tr>
-                    <th>название столбца 1</th>
-                    <th>название столбца 2</th>
-                    <th>название столбца 3</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td>ячейка 1</td>
-                    <td>ячейка 2</td>
-                    <td>ячейка 3</td>
-                  </tr>
-                  <tr>
-                    <td>ячейка 1</td>
-                    <td>ячейка 2</td>
-                    <td>ячейка 3</td>
-                  </tr>
-                </tbody>
-              </table>
+            <div class="col-5">
+              <p class="mb-0 h3">Комплексная поставка компьютерного оборудования для бизнеса</p>
+            </div>
+            <div class="col-6"> 
+              <p class="mb-0 text-dark-blue">
+                Мы предлагаем исчерпывающий ассортимент IT-решений для бизнеса, что позволяет подобрать оптимальное техническое оснащение, которое поможет достигать 
+                поставленных целей. Наши инженеры разрабатывают и интегрируют в бизнес-процессы 
+                индивидуальные технические решения, которые оптимизируют рабочие процессы, а также 
+                способствуют росту производительности.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="vendor">
+        <div class="container">
+          <div class="row">
+            <div class="col-4">
+              <div class="service vendor__item"><a class="vendor__modal" data-fancybox="test1" data-src="#test" href="javascript:;">?</a>
+                <div class="row align-items-center">
+                  <div class="col-4"><img class="img-fluid" src="../img/logo/1.jpg"/></div>
+                  <div class="col-8">
+                    <p class="vendor__title">Вендор 1</p><a class="vendor__link" href="#">+ сертификат партнерства</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-4">
+              <div class="service vendor__item"><a class="vendor__modal" data-fancybox="test2" data-src="#test" href="javascript:;">?</a>
+                <div class="row align-items-center">
+                  <div class="col-4"><img class="img-fluid" src="../img/logo/2.jpg"/></div>
+                  <div class="col-8">
+                    <p class="vendor__title">Вендор 2</p><a class="vendor__link" href="#">+ сертификат партнерства</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-4">
+              <div class="service vendor__item"><a class="vendor__modal" data-fancybox="test3" data-src="#test" href="javascript:;">?</a>
+                <div class="row align-items-center">
+                  <div class="col-4"><img class="img-fluid" src="../img/logo/3.jpg"/></div>
+                  <div class="col-8">
+                    <p class="vendor__title">Вендор 3</p><a class="vendor__link" href="#">+ сертификат партнерства</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="catalog">
+        <div class="container">
+          <div class="catalog__line mb-40"></div>
+          <form class="form form_filter">
+            <select class="select" id="vendor" name="">
+              <option value="1">Вендор 1</option>
+              <option value="2">Вендор 2</option>
+              <option value="3">Вендор 3</option>
+            </select>
+            <select class="select" id="sphere" name="">
+              <option value="1">Сфера 1</option>
+              <option value="2">Сфера 2</option>
+              <option value="3">Сфера 3            </option>
+            </select>
+          </form>
+          <div class="row">
+            <div class="col-3">
+              <div class="solution">
+                <div class="solution__image"><img class="solution__vendor-logo" src="../img/logo/4.jpg"/></div>
+                <div class="solution__info"><span class="text-bold">Вендор 1</span><span> / </span><span>Сфера 1</span></div><a class="solution__title" href="/">Решение 1</a>
+              </div>
+            </div>
+            <div class="col-3">
+              <div class="solution">
+                <div class="solution__image"><img class="solution__vendor-logo" src="../img/logo/5.jpg"/></div>
+                <div class="solution__info"><span class="text-bold">Вендор 1</span><span> / Сфера 1</span></div><a class="solution__title" href="/">Решение 2</a>
+              </div>
+            </div>
+            <div class="col-3">
+              <div class="solution">
+                <div class="solution__image"><img class="solution__vendor-logo" src="../img/logo/6.jpg"/></div>
+                <div class="solution__info"><span class="text-bold">Вендор 1</span><span> / Сфера 1</span></div><a class="solution__title" href="/">Решение 2</a>
+              </div>
             </div>
           </div>
         </div>
@@ -122,6 +198,13 @@
           </div>
           <div class="col-6 text-right"><a class="text-small footer-info__link" href="/">Сайт разработан студией «SOHO»</a></div>
         </div>
+      </div>
+    </div>
+    <div class="modal" id="test" style="display: none;">
+      <div class="modal__title">Заголовок модального окна</div>
+      <div class="modal__content"> 
+        <p>Lorem ipsum dolor sit amet. Praesentium voluptatum deleniti atque corrupti. Ipsam voluptatem, quia non provident, similique sunt. Doloribus asperiores repellat. cumque nihil impedit, quo minus id, quod maxime. Aspernatur aut rerum necessitatibus saepe. Sit voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem eum fugiat. Hic tenetur a sapiente delectus, ut aliquid ex ea voluptate. Sint, obcaecati cupiditate non provident, similique sunt in ea voluptate velit esse.</p>
+        <p>Lorem ipsum dolor sit amet. Praesentium voluptatum deleniti atque corrupti. Ipsam voluptatem, quia non provident, similique sunt. Doloribus asperiores repellat. cumque nihil impedit, quo minus id, quod maxime. Aspernatur aut rerum necessitatibus saepe. Sit voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem eum fugiat. Hic tenetur a sapiente delectus, ut aliquid ex ea voluptate. Sint, obcaecati cupiditate non provident, similique sunt in ea voluptate velit esse.</p>
       </div>
     </div>
     <script src="./js/jquery.min.js"></script>
