--- a/public/service.html
+++ b/public/service.html
@@ -44,49 +44,227 @@
       </div>
     </header>
     <main>
+      <section class="bg-gradient title">
+        <div class="container">
+          <div class="row justify-content-between">
+            <div class="col-6">
+              <h1 class="heading">Услуги компании</h1>
+            </div>
+            <div class="col-5"> 
+              <p class="subheading subheading_light">Разработка и внедрение IT-решений</p>
+              <div class="subheading-line subheading-line_light"></div>
+              <p>Компания “ИНКАМ” - мультивендорный системный интегратор, оказывающий полный спектр ИТ-услуг и предлагающий высококачественные решения, ориентированные на удовлетворение потребностей крупных, средних и небольших компаний различных сфер деятельности.</p>
+            </div>
+          </div>
+        </div>
+      </section>
       <section class="content">
         <div class="container">
-          <div class="row">
-            <div class="col-9 col-md-12">
-              <h1>Odit aut rerum hic tenetur a sapiente delectus, ut</h1>
-              <p>Lorem ipsum dolor sit amet. Praesentium voluptatum deleniti atque corrupti. Ipsam voluptatem, quia non provident, similique sunt. Doloribus asperiores repellat. cumque nihil impedit, quo minus id, quod maxime. Aspernatur aut rerum necessitatibus saepe. Sit voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem eum fugiat. Hic tenetur a sapiente delectus, ut aliquid ex ea voluptate. Sint, obcaecati cupiditate non provident, similique sunt in ea voluptate velit esse.</p>
-              <h2>Заголовок h2</h2>
-              <h3>Заголовок h3</h3>
-              <h4>Заголовок h4</h4>
-              <h5>Заголовок h5</h5>
-              <h6>Заголовок h6</h6>
-              <p>Odit aut rerum hic tenetur a sapiente delectus, ut. Perferendis doloribus asperiores repellat. nam libero tempore, cum soluta nobis. Quidem rerum hic tenetur. Facilis est eligendi optio, cumque nihil impedit, quo minus. Voluptate velit esse, quam nihil. Iusto odio dignissimos ducimus, qui in culpa. Ex ea voluptate velit esse, quam nihil molestiae consequatur, vel illum. Sit, amet, consectetur, adipisci velit.</p>
-              <blockquote>Lorem ipsum dolor sit amet. Praesentium voluptatum deleniti atque corrupti. </blockquote>
-              <p>Odit aut rerum hic tenetur a sapiente delectus, ut. Perferendis doloribus asperiores repellat. nam libero tempore, cum soluta nobis. Quidem rerum hic tenetur. Facilis est eligendi optio, cumque nihil impedit, quo minus. Voluptate velit esse, quam nihil. Iusto odio dignissimos ducimus, qui in culpa. Ex ea voluptate velit esse, quam nihil molestiae consequatur, vel illum. Sit, amet, consectetur, adipisci velit.</p>
-              <ul>
-                <li>list-item-1</li>
-                <li>list-item-2</li>
-                <li>list-item-3</li>
-                <li>list-item-4</li>
-                <li>list-item-5</li>
-              </ul>
-              <p>Lorem ipsum dolor sit amet. Praesentium voluptatum deleniti atque corrupti. Ipsam voluptatem, quia non provident, similique sunt. Doloribus asperiores repellat. cumque nihil impedit, quo minus id, quod maxime. Aspernatur aut rerum necessitatibus saepe. Sit voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem eum fugiat. Hic tenetur a sapiente delectus, ut aliquid ex ea voluptate. Sint, obcaecati cupiditate non provident, similique sunt in ea voluptate velit esse.</p>
-              <table>
-                <thead>
-                  <tr>
-                    <th>название столбца 1</th>
-                    <th>название столбца 2</th>
-                    <th>название столбца 3</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td>ячейка 1</td>
-                    <td>ячейка 2</td>
-                    <td>ячейка 3</td>
-                  </tr>
-                  <tr>
-                    <td>ячейка 1</td>
-                    <td>ячейка 2</td>
-                    <td>ячейка 3</td>
-                  </tr>
-                </tbody>
-              </table>
+          <div class="row no-gutters">
+            <div class="col-4">
+              <div class="task task_tab">
+                <div class="task__title">Предпроектное обследование</div>
+                <div class="task__tab-content"> 
+                  <p>Заказав услугу по экспертной оценке актуального состояния ИТ-инфраструктуры и ИТ-сервисов на предприятии в компании Открытые Технологии, Вы получите план по повышению эффективности и снижению затрат на эксплуатацию систем.</p>
+                  <p>Результатом станет:</p>
+                  <ul>
+                    <li>более результативное использование имеющихся ИТ-ресурсов;</li>
+                    <li>минимизация рисков, связанных с использованием ИТ;</li>
+                    <li>понимание слабых мест и участков сети или системы, способных привести к нестабильной работе;</li>
+                    <li>получение картины затрат на реализацию проекта, что полезно на стадии принятия решения о запуске;</li>
+                    <li>выдача профессиональных рекомендаций по используемому оборудованию и его настройкам.</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="task task_tab">
+                <div class="task__title">Управление комплексными проектами</div>
+                <div class="task__tab-content"> 
+                  <p>Заказав услугу по экспертной оценке актуального состояния ИТ-инфраструктуры и ИТ-сервисов на предприятии в компании Открытые Технологии, Вы получите план по повышению эффективности и снижению затрат на эксплуатацию систем.</p>
+                  <p>Результатом станет:</p>
+                  <ul>
+                    <li>более результативное использование имеющихся ИТ-ресурсов;</li>
+                    <li>минимизация рисков, связанных с использованием ИТ;</li>
+                    <li>понимание слабых мест и участков сети или системы, способных привести к нестабильной работе;</li>
+                    <li>получение картины затрат на реализацию проекта, что полезно на стадии принятия решения о запуске;</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="task task_tab">
+                <div class="task__title">Монтажные и пусконаладочные работы</div>
+                <div class="task__tab-content"> 
+                  <p>Заказав услугу по экспертной оценке актуального состояния ИТ-инфраструктуры и ИТ-сервисов на предприятии в компании Открытые Технологии, Вы получите план по повышению эффективности и снижению затрат на эксплуатацию систем.</p>
+                  <p>Результатом станет:</p>
+                  <ul>
+                    <li>более результативное использование имеющихся ИТ-ресурсов;</li>
+                    <li>минимизация рисков, связанных с использованием ИТ;</li>
+                    <li>понимание слабых мест и участков сети или системы, способных привести к нестабильной работе;</li>
+                    <li>получение картины затрат на реализацию проекта, что полезно на стадии принятия решения о запуске;</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col-4">
+              <div class="task task_tab">
+                <div class="task__title">Проектирование</div>
+                <div class="task__tab-content"> 
+                  <p>Заказав услугу по экспертной оценке актуального состояния ИТ-инфраструктуры и ИТ-сервисов на предприятии в компании Открытые Технологии, Вы получите план по повышению эффективности и снижению затрат на эксплуатацию систем.</p>
+                  <p>Результатом станет:</p>
+                  <ul>
+                    <li>более результативное использование имеющихся ИТ-ресурсов;</li>
+                    <li>минимизация рисков, связанных с использованием ИТ;</li>
+                    <li>понимание слабых мест и участков сети или системы, способных привести к нестабильной работе;</li>
+                    <li>получение картины затрат на реализацию проекта, что полезно на стадии принятия решения о запуске;</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="task task_tab">
+                <div class="task__title">Поставка оборудования</div>
+                <div class="task__tab-content"> 
+                  <p>Заказав услугу по экспертной оценке актуального состояния ИТ-инфраструктуры и ИТ-сервисов на предприятии в компании Открытые Технологии, Вы получите план по повышению эффективности и снижению затрат на эксплуатацию систем.</p>
+                  <p>Результатом станет:</p>
+                  <ul>
+                    <li>более результативное использование имеющихся ИТ-ресурсов;</li>
+                    <li>минимизация рисков, связанных с использованием ИТ;</li>
+                    <li>понимание слабых мест и участков сети или системы, способных привести к нестабильной работе;</li>
+                    <li>получение картины затрат на реализацию проекта, что полезно на стадии принятия решения о запуске;</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="task task_tab">
+                <div class="task__title">Техническая поддержка</div>
+                <div class="task__tab-content"> 
+                  <p>Заказав услугу по экспертной оценке актуального состояния ИТ-инфраструктуры и ИТ-сервисов на предприятии в компании Открытые Технологии, Вы получите план по повышению эффективности и снижению затрат на эксплуатацию систем.</p>
+                  <p>Результатом станет:</p>
+                  <ul>
+                    <li>более результативное использование имеющихся ИТ-ресурсов;</li>
+                    <li>минимизация рисков, связанных с использованием ИТ;</li>
+                    <li>понимание слабых мест и участков сети или системы, способных привести к нестабильной работе;</li>
+                    <li>получение картины затрат на реализацию проекта, что полезно на стадии принятия решения о запуске;</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col-4">
+              <div class="task task_tab">
+                <div class="task__title">Строительство сети</div>
+                <div class="task__tab-content"> 
+                  <p>Заказав услугу по экспертной оценке актуального состояния ИТ-инфраструктуры и ИТ-сервисов на предприятии в компании Открытые Технологии, Вы получите план по повышению эффективности и снижению затрат на эксплуатацию систем.</p>
+                  <p>Результатом станет:</p>
+                  <ul>
+                    <li>более результативное использование имеющихся ИТ-ресурсов;</li>
+                    <li>минимизация рисков, связанных с использованием ИТ;</li>
+                    <li>понимание слабых мест и участков сети или системы, способных привести к нестабильной работе;</li>
+                    <li>получение картины затрат на реализацию проекта, что полезно на стадии принятия решения о запуске;</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="task task_tab">
+                <div class="task__title">Технический аудит</div>
+                <div class="task__tab-content"> 
+                  <p>Заказав услугу по экспертной оценке актуального состояния ИТ-инфраструктуры и ИТ-сервисов на предприятии в компании Открытые Технологии, Вы получите план по повышению эффективности и снижению затрат на эксплуатацию систем.</p>
+                  <p>Результатом станет:</p>
+                  <ul>
+                    <li>более результативное использование имеющихся ИТ-ресурсов;</li>
+                    <li>минимизация рисков, связанных с использованием ИТ;</li>
+                    <li>понимание слабых мест и участков сети или системы, способных привести к нестабильной работе;</li>
+                    <li>получение картины затрат на реализацию проекта, что полезно на стадии принятия решения о запуске;</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="content content_offset bg-light">
+        <div class="container">
+          <p class="h4 mb-40">Внедрение IТ-решений «под ключ» позволит вам:</p>
+          <div class="row advantage advantage_with-icon">
+            <div class="col-4 d-flex mb-20">
+              <div class="advantage__item">эффективно использовать IT-ресурсы<img class="advantage__icon position-1" src="../img/clipboard-check.svg"/></div>
+            </div>
+            <div class="col-4 d-flex mb-20">
+              <div class="advantage__item">минимизировать риски с&nbsp;технической стороны<img class="advantage__icon position-2" src="../img/lightbulb.svg"/></div>
+            </div>
+            <div class="col-4 d-flex mb-20">
+              <div class="advantage__item">снизить затраты на&nbsp;реализацию проекта<img class="advantage__icon position-3" src="../img/credit-card.svg"/></div>
+            </div>
+            <div class="col-4 d-flex">
+              <div class="advantage__item">грамотно планировать расширение структуры<img class="advantage__icon position-4" src="../img/map.svg"/></div>
+            </div>
+            <div class="col-4 d-flex">
+              <div class="advantage__item">получить оборудование в&nbsp;короткие сроки<img class="advantage__icon position-5" src="../img/clock.svg"/></div>
+            </div>
+            <div class="col-4 d-flex">
+              <div class="advantage__item">рассчитывать на&nbsp;техподдержку 24/7<img class="advantage__icon position-6" src="../img/diamond.svg"/></div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="content content_offset">
+        <div class="container">
+          <div class="row justify-content-between">
+            <div class="col-8">
+              <p class="h1 mb-40">IT-решения</p>
+              <div class="row no-gutters">
+                <div class="col-6 d-flex">
+                  <div class="service service_content-hover">
+                    <div class="service__title">Сетевая инфраструктура</div>
+                    <div class="service__content">
+                      <p class="mb-0 text-small">
+                        Передача данных <br>Транспортные и опорные сети <br>
+                        Фиксированный доступ и радиодоступ <br>
+                        Система управления сетью
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-6 d-flex">
+                  <div class="service service_content-hover service_bl-hide">
+                    <div class="service__title">Информационная безопасность</div>
+                    <div class="service__content">
+                      <p class="text-small">
+                        Передача данных <br>Транспортные и опорные сети <br></p>
+                      <p class="text-small mb-0">
+                        Передача данных <br>Транспортные и опорные сети <br></p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-6 d-flex">
+                  <div class="service service_content-hover service_bt-hide">
+                    <div class="service__title">Связь и коллективная работа</div>
+                    <div class="service__content">
+                      <p class="text-small mb-0">
+                        Передача данных <br>Транспортные и опорные сети</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-6 d-flex">
+                  <div class="service service_content-hover service_bt-hide service_bl-hide">
+                    <div class="service__title">ЦОД</div>
+                    <div class="service__content">
+                      <p class="text-small mb-0">
+                        Передача данных <br>Транспортные и опорные сети <br>
+                        Транспортные и опорные сети
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-3">
+              <p class="subheading">Нас рекомендуют</p>
+              <div class="subheading-line subheading-line_sidebar"></div>
+              <div class="slider slider_review">
+                <div class="slider__item"><a href="../img/demo-review.jpg" data-fancybox="data-fancybox" data-caption="Caption for single image"><img class="img-fluid img-border" src="../img/demo-review.jpg"/></a>
+                  <p class="text-small mt-20 mb-0">Текст из письма текст из письма Текст из письма текст из письма Текст из письма текст из письма</p>
+                </div>
+                <div class="slider__item"><a href="../img/demo-review.jpg" data-fancybox="data-fancybox" data-caption="Caption for single image"><img class="img-fluid img-border" src="../img/demo-review.jpg"/></a>
+                  <p class="text-small mt-20 mb-0">Текст из письма текст из письма Текст из письма текст из письма Текст из письма текст из письма</p>
+                </div>
+                <div class="slider__item"><a href="../img/demo-review.jpg" data-fancybox="data-fancybox" data-caption="Caption for single image"><img class="img-fluid img-border" src="../img/demo-review.jpg"/></a>
+                  <p class="text-small mt-20 mb-0">Текст из письма текст из письма Текст из письма текст из письма Текст из письма текст из письма Текст из письма текст из письма Текст из письма текст из письма Текст из письма текст из письма Текст из письма текст из письма Текст из письма текст из письма Текст из письма текст из письма Текст из письма текст из письма</p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
